deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wolke7-connector
  namespace: wolke7
  labels:
    app: wolke7-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wolke7-connector
  template:
    metadata:
      labels:
        app: wolke7-connector
    spec:
      containers:
        - name: wolke7-connector
          image: docker.pkg.github.com/nepomuk-software/wolke7-connector/wolke7-connector:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: nepomuk-software-registry-key
