ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wolke7-connector-ingress
  namespace: wolke7
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: wolke7-connector.nepomuk.software
      http:
        paths:
          - path: /
            backend:
              serviceName: wolke7-connector-service
              servicePort: 8080
